# cppfirstproject

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/: CMakeLists.txt
src/app1/: CMakeLists.txt  helloworld.cpp
src/lib-account/: Account.h  CMakeLists.txt  account.cpp
src/lib-deep/: CMakeLists.txt  deep.cpp  deep.h
src/lib-mystring/: CMakeLists.txt  Mystring.cpp  Mystring.h
src/lib-player/: CMakeLists.txt  Player.cpp  Player.h
src/lib-testaccount/: CMakeLists.txt  TestAcount.h
src/lib-threads/: CMakeLists.txt  TestThreads.cpp  TestThreads.h
